--- a/src/main/webapp/content/scss/themes/theme-dark.scss
+++ b/src/main/webapp/content/scss/themes/theme-dark.scss
@@ -310,4 +310,5 @@ input:-webkit-autofill:active {
     --onboarding-input-bg: #000;
     --overview-card-bg: #1a1a1a;
     --overview-card-nested-bg: #3a3a3a;
+    --overview-card-hover-bg: #4a4a4a;
 }
