--- a/src/main/webapp/content/scss/themes/theme-default.scss
+++ b/src/main/webapp/content/scss/themes/theme-default.scss
@@ -60,4 +60,5 @@ html {
     --feature-card-heading-color: #212529;
     --overview-card-bg: #ffffff;
     --overview-card-nested-bg: #f3f4f6;
+    --overview-card-hover-bg: #e5e7eb;
 }
